--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="formulario">
                 <h1>login</h1>
-                <p>seja bem vindo(a) novamente, faça login para acessar sua conta e poder fazer configurações no seu ambiente.</p>
+                <p>seja bem vindo(a) novamente.</p>
                 <form action="login.php" method="post">
 
                 </form>
