--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -17,8 +18,19 @@
             <div id="formulario">
                 <h1>login</h1>
                 <p>seja bem vindo(a) novamente.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <label for="ilogin">Login</label>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" maxlength="40" required >
+                        <span class="material-symbols-outlined">person</span>
+                    </div>
+                    <div class="campo">
+                        <label for="isenha">Senha</label>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" minlength="8" maxlength="30">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esquesci.html"><button>Esqueci a senha</button></a>
                 </form>
             </div>
         </section>
