--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 <p>seja bem vindo(a) novamente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <label for="ilogin">Login</label>
+                        <i class="material-symbols-outlined">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" maxlength="40" required >
-                        <span class="material-symbols-outlined">person</span>
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <label for="isenha">Senha</label>
+                        <i class="material-symbols-outlined">vpn_key</i>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" minlength="8" maxlength="30">
-                        <span class="material-symbols-outlined">vpn_key</span>
+                        <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esquesci.html"><button>Esqueci a senha</button></a>
+                    <a href="esquesci.html">Esqueci a senha</a>
                 </form>
             </div>
         </section>
