--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="formulario">
                 <h1>login</h1>
-                <p>seja bem vindo(a) novamente.</p>
+                <p>seja bem vindo(a) novamente</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-symbols-outlined">person</i>
