--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>tela de login</title>
 </head>
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-                
+            <div id="imagem">             
             </div>
             <div id="formulario">
                 <h1>login</h1>
